Fix UI issues (#21)
* Fix UI issues
- Increase font size for smaller devices
- Update UXDetails for smaller device sizes to ensure content isn't cut off
- Remove sanitize function on Projects and SideProjects to prevent hydration errors
- Increase padding on small button size

* Remove unused imports

--- a/src/app/blog/blog.module.scss
+++ b/src/app/blog/blog.module.scss
@@ -50,7 +50,7 @@
   ol li, ul li, code {
     font-family: "Gothic A1", sans-serif;
     font-size: var(--text-body-sm);
-    line-height: var(--text-body-sm--line-height);
+    line-height: 24px;
     position: relative;
 
     @media screen and (min-width: 1024px) {
